tallying correct answers works with score

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
              <!--------------------------- first set of mulitple choice------------------------------------------>
             <div class= "container-Q1">A class is in CSS is represented as which symbol<br>
-                <button>.</button>
+                <button class= "correct">.</button>
             <br>
-                <button>%</button>
+                <button class= "wrong">%</button>
             <br>
-                <button>@</button>
+                <button class= "wrong">@</button>
             <br>
-                <button>?</button> 
+                <button class= "wrong">?</button> 
             </div>
             
              <!-------------------------------------------------------------------------------------------------->                                   
@@ -42,13 +42,13 @@
              <!--------------------------- second set of mulitple choice------------------------------------------->
 
              <div class= "container-Q2">An ID in CSS is represented as which symbol<br>
-                <button>#</button>
+                <button class= "correct">#</button>
             <br>
-                <button>^</button> 
+                <button class= "wrong">^</button> 
             <br>
-                <button>:</button>
+                <button class= "wrong">:</button>
             <br>
-                <button>$</button>
+                <button class= "wrong">$</button>
             </div>
         </div>                            
     </div>    
