added scoreboard div with display change on finish button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </div>                            
     <button class ="nextButton" display ="none">NEXT </button>
     <button class = "finishButton" display ="none">Finish</button>
-    </div>    
+        <div class="container-fluid scoreboard" display="none" >
+            <h1 id="first">first score</h1>
+            <h1 id="second">second score</h1>
+            <h1 id="third">third score</h1>
+        </div>
+</div>    
 
 
 
